Fixed difference text on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,7 +76,6 @@ body {
   /* font-weight: 400; */
   font-style: normal;
   background-color: var(--background);
-  height: 100dvh;
   transition:
     filter 0.2s ease-out,
     opacity 0.2s ease-out,
