--- a/app/styles/projectNav.module.css
+++ b/app/styles/projectNav.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   margin-left: 0px;
-  height: 100vh;
 
   @media screen and (width <=768px) {
     margin-left: 0px;
@@ -117,6 +116,10 @@
     left: 38px;
     width: 30%;
     bottom: 25%;
+  }
+
+  .listTitleMobile {
+    mix-blend-mode: unset;
   }
 }
 
